2018-01-01  Yavor Doganov <yavor@gnu.org>

	* Documentation/make_services.1: Typo fix.

2018-01-01 Fred Kiefer <FredKiefer@gmx.de>

	* config/pkg.m4: Update to serial 12.
	* Headers/Additions/GNUstepGUI/config.h.in,
	* configure: Regnerate
	Fixes bug #52779.
	Patch by Yavor Doganov <yavor@gnu.org>

2017-12-31 Ivan Vucica <ivan@vucica.net>

	* Documentation/announce.texi
	* Documentation/news.texi
	* Documentation/ReleaseNotes.gsdoc
	* ANNOUNCE
	* NEWS
	* Version: Cut a new release of gnustep-gui which requires
	gnustep-base 1.25.1.

2017-12-28 Fred Kiefer <FredKiefer@gmx.de>

	* Tests/gui/NSBezierPath/windingCountAtPoint.m
	* Tests/gui/NSCell/basic.m
	* Tests/gui/NSEvent/delta.m
	* Tests/gui/NSPasteboard/lazy_copy.m
	* Tests/gui/NSSavePanel/setDelegate_reload.m
	* Tests/gui/NSSliderCell/minMax.m
	Remove comipler warnings in test code.
	* Tests/gui/TextSystem/deallocation.m
	Move auto release pool inside of the test set to get the test
	working again.

2017-12-28 Fred Kiefer <FredKiefer@gmx.de>

	* Printing/GSCUPS/GSCUPSPrinter.m,
	* Printing/GSCUPS/GSCUPSPrintInfo.m,
	* Printing/GSCUPS/GSCUPSPrintOperation.m: Undefine __BLOCKS__
	before the cups.h import as some versions of this header file
	expect unconditional that libdispatch is present when that
	variable is defined.
	Remove duplicated -allocWithZone: methods.

2017-12-27 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSGraphicsContext.m:  When using clang and the gnustep
	runtime (the nonfragile API), it seems the compiler calculates the
	offset of the _gcontext instance variuable in the NSThread object
	incorrectly, causing a crash.
	Until we know why and can fix it, we need a workaround.  The simplest
	one would be not to use the instance variable at all, but on the
	assumption that the instance variable was added to address a real
 	performance issue it seems better to use the runtime to access the
	instance variable.

2017-12-21 Ivan Vucica <ivan@vucica.net>

	* Documentation/announce.texi